# radar_cam_calib_tools

calib_cam_radar/: CMakeLists.txt
calib_cam_radar/config/: calib_config.yaml
calib_cam_radar/dataset/tj_84_2/: result.yaml
calib_cam_radar/include/: cam2RTK_calib.h  data_io.hpp  data_struct.hpp
calib_cam_radar/scripts/: check_result.py  check_result_bak.py  imageShow.py  points_on_road.txt
calib_cam_radar/src/: cam2RTK_calib.cpp  radar_calib_check.cpp  radar_reproject.cpp  radar_select.cpp  radar_select_bakup.cpp  radar_static_calib_yaw.cpp
radar_data_tools/: CMakeLists.txt
radar_data_tools/config/: match_config.yaml
radar_data_tools/data/84_2/radar/: radar_1_1619469478019991000.txt  radar_1_1619469478098325000.txt  radar_1_1619469478538079000.txt  radar_1_1619469478584540000.txt  radar_1_1619469478674826000.txt  radar_1_1619469478842998000.txt  radar_1_1619469479078102000.txt  radar_1_1619469479158278000.txt  radar_1_1619469479198745000.txt  radar_1_1619469479278863000.txt  radar_1_1619469479318770000.txt  radar_1_1619469479400505000.txt  radar_1_1619469479478066000.txt  radar_1_1619469479518506000.txt  radar_1_1619469479654265000.txt  radar_1_1619469479698394000.txt  radar_1_1619469479900575000.txt  radar_1_1619469479984483000.txt  radar_1_1619469480758106000.txt  radar_1_1619469481000770000.txt  radar_1_1619469481118067000.txt  radar_1_1619469481243134000.txt  radar_1_1619469481399119000.txt  radar_1_1619469481442915000.txt  radar_1_1619469481518385000.txt  (+14519 more)
radar_data_tools/include/: data_struct.h
radar_data_tools/result/: 83_1_lai_5_27.txt  83_1_qu_5_27.txt  radar_calibdata.txt
radar_data_tools/script/: check_result.py
radar_data_tools/script/5_25/: 83_1_all_radar_gps_r.txt  83_1_lai_radar_gps_r.txt  83_1_qu_radar_gps_r.txt  83_2_all_radar_gps_r.txt  83_2_lai_radar_gps_r.txt  83_2_qu_radar_gps_r.txt  83_3_all_radar_gps_r.txt  83_3_all_radar_gps_r_2.txt  83_3_lai_radar_gps_r_2.txt  83_3_qu_radar_gps_r.txt  83_3_qu_radar_gps_r_2.txt  83_4_qu_radar_gps_r.txt
radar_data_tools/src/: check_rtk_radar.cpp  match_rtk_radar.cpp
tj_83_2/: GPS_ins.txt
(+17318 files in other folders)
